feat: update auth API and user API
